--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
       - main
       - develop
     paths-ignore:
-      - '.github/workflows/*'
+      # - '.github/workflows/*'
       - 'test/**'
       - '**.md'
 
