--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Download ECS Task Definition 
         run: |
           aws ecs describe-task-definition \
-          --task-definition hotel-job-api-prod-task \
-          --region ${{ secrets.AWS_REGION }} \
-          --output json > task-definition.json
+          --task-definition hotel-job-api-${{env.stage}}-task \
+          --query taskDefinition \
+          --region ${{ secrets.AWS_REGION }} > task-definition.json
 
       - name: Debug Task Definition JSON
         run: |
