--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
 name: ECS Deployment
 
 on:
-  # workflow_dispatch:
+  workflow_dispatch:
   push:
     branches:
       - main
       - develop
     paths-ignore:
-      # - '.github/workflows/*'
+      - '.github/workflows/*'
       - 'test/**'
       - '**.md'
 
@@ -93,8 +93,9 @@ jobs:
         run: |
           aws ecs describe-task-definition \
           --task-definition hotel-job-api-${{env.stage}}-task \
-          --region ${{ secrets.AWS_REGION }} \
-          --output json > task-definition.json
+          --query taskDefinition \
+          --region ${{ secrets.AWS_REGION }} > task-definition.json
+
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         env:
