--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
       - main
       - develop
     paths-ignore:
-      - '.github/workflows/*'
+      # - '.github/workflows/*'
       - 'test/**'
       - '**.md'
 
@@ -96,6 +96,10 @@ jobs:
           --query taskDefinition \
           --region ${{ secrets.AWS_REGION }} > task-definition.json
 
+      - name: Debug Task Definition JSON
+        run: |
+          echo "The content of the Task Definition JSON file is:"
+          cat task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         env:
@@ -104,7 +108,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: ${{ secrets.CONTAINER_NAME }}
+          container-name: prod-hotel-job-api
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Debug new task definition output
