--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,18 +44,18 @@ jobs:
           name: ".env-cmdrc.json"
           json: ${{ secrets.ENV_CMDRC }}
 
-      - name: Create task JSON File
-        id: task-json
-        uses: jsdaniell/create-json@1.1.2
-        with:
-          name: "task-definition.json"
-          json: ${{ env.task_definition }}
+      # - name: Create task JSON File
+      #   id: task-json
+      #   uses: jsdaniell/create-json@1.1.2
+      #   with:
+      #     name: "task-definition.json"
+      #     json: ${{ env.task_definition }}
 
-      - name: test branch
-        run: |
-          ls -a
-          cat .env-cmdrc.json
-          echo "The branch is env : ${{ env.stage }}"
+      # - name: test branch
+      #   run: |
+      #     ls -a
+      #     cat .env-cmdrc.json
+      #     echo "The branch is env : ${{ env.stage }}"
 
       # Enable QEMU for ARM64 emulation
       - name: Set up QEMU
@@ -94,29 +94,39 @@ jobs:
           aws ecs describe-task-definition \
           --task-definition hotel-job-api-${{env.stage}}-task \
           --query taskDefinition \
-          --region ${{ secrets.AWS_REGION }} > task-definition.json
+          --region ${{ secrets.AWS_REGION }} \
+          | jq -r 'del(
+            .taskDefinitionArn,
+            .requiresAttributes,
+            .compatibilities,
+            .revision,
+            .status,
+            .registeredAt,
+            .registeredBy
+          )' > task-definition.json
+          # aws ecs describe-task-definition \
+          # --task-definition hotel-job-api-${{env.stage}}-task \
+          # --query taskDefinition \
+          # --region ${{ secrets.AWS_REGION }} > task-definition.json
 
       - name: Debug Task Definition JSON
         run: |
           echo "The content of the Task Definition JSON file is:"
           cat task-definition.json
 
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: ${{env.stage}}-hotel-job-api
-          image: ${{ steps.build-image.outputs.image }}
+      # - name: Fill in the new image ID in the Amazon ECS task definition
+      #   id: task-def
+      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
+      #   with:
+      #     task-definition: task-definition.json
+      #     container-name: ${{env.stage}}-hotel-job-api
+      #     image: ${{ steps.build-image.outputs.image }}
 
-      - name: Debug new task definition output
-        run: echo ${{ steps.task-def.outputs.task-definition }}
-
-      - name: Upload new task definition
-        uses: actions/upload-artifact@v4
-        with:
-          name: new-task-definition
-          path: ${{ steps.task-def.outputs.task-definition }}
+      # - name: Upload new task definition
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: new-task-definition
+      #     path: ${{ steps.task-def.outputs.task-definition }}
 
       - name: Deploy Amazon ECS task definition
         env:
