--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,10 +109,10 @@ jobs:
           # --query taskDefinition \
           # --region ${{ secrets.AWS_REGION }} > task-definition.json
 
-      # - name: Debug Task Definition JSON
-      #   run: |
-      #     echo "The content of the Task Definition JSON file is:"
-      #     cat task-definition.json
+      - name: Debug Task Definition JSON
+        run: |
+          echo "The content of the Task Definition JSON file is:"
+          cat task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
