--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ on:
       - '**.md'
 
 # permissions:
-  # contents: read
+# contents: read
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Get branch name
+      - name: Check branch name
         id: branch
 
         run: |
@@ -34,6 +34,12 @@ jobs:
             exit 1
           fi
 
+      - name: Output Stage
+        run: |
+          ls -a
+          cat .env-cmdrc.json
+          echo "The branch is env : ${{ env.stage }}"
+
       - name: Get Code
         uses: actions/checkout@v4
 
@@ -41,21 +47,8 @@ jobs:
         id: env-json
         uses: jsdaniell/create-json@1.1.2
         with:
-          name: ".env-cmdrc.json"
+          name: '.env-cmdrc.json'
           json: ${{ secrets.ENV_CMDRC }}
-
-      # - name: Create task JSON File
-      #   id: task-json
-      #   uses: jsdaniell/create-json@1.1.2
-      #   with:
-      #     name: "task-definition.json"
-      #     json: ${{ env.task_definition }}
-
-      # - name: test branch
-      #   run: |
-      #     ls -a
-      #     cat .env-cmdrc.json
-      #     echo "The branch is env : ${{ env.stage }}"
 
       # Enable QEMU for ARM64 emulation
       - name: Set up QEMU
@@ -89,7 +82,7 @@ jobs:
           echo "image=$ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
           # echo "output - $ECR_REGISTRY/${{env.stage}}/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      - name: Download ECS Task Definition 
+      - name: Download ECS Task Definition
         run: |
           aws ecs describe-task-definition \
           --task-definition hotel-job-api-${{env.stage}}-task \
@@ -128,9 +121,17 @@ jobs:
       #     name: new-task-definition
       #     path: ${{ steps.task-def.outputs.task-definition }}
 
+      - name: Set ECS_SERVICE based on stage
+        id: set-service
+        run: |
+          if [ "${{ env.stage }}" = "prod" ]; then
+            echo "ECS_SERVICE=${{ secrets.ECS_SERVICE }}" >> $GITHUB_ENV
+          else
+            echo "ECS_SERVICE=${{ secrets.ECS_DEV_SERVICE }}" >> $GITHUB_ENV
+          fi
+
       - name: Deploy Amazon ECS task definition
         env:
-          ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
           ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
