--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,20 +86,20 @@ jobs:
           aws ecs describe-task-definition \
           --task-definition hotel-job-api-${{env.stage}}-task \
           --query taskDefinition \
-          --region ${{ secrets.AWS_REGION }} \
-          | jq -r 'del(
-              .taskDefinitionArn,
-              .requiresAttributes,
-              .compatibilities,
-              .revision,
-              .status,
-              .registeredAt,
-              .registeredBy
-            )' > task-definition.json
+          --region ${{ secrets.AWS_REGION }} > task-definition.json
           # aws ecs describe-task-definition \
           # --task-definition hotel-job-api-${{env.stage}}-task \
           # --query taskDefinition \
-          # --region ${{ secrets.AWS_REGION }} > task-definition.json
+          # --region ${{ secrets.AWS_REGION }} \
+          # | jq -r 'del(
+          #     .taskDefinitionArn,
+          #     .requiresAttributes,
+          #     .compatibilities,
+          #     .revision,
+          #     .status,
+          #     .registeredAt,
+          #     .registeredBy
+          #   )' > task-definition.json
 
       - name: Debug Task Definition JSON
         run: |
