--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "env-cmd -e development nest start --watch",
+    "start:dev": "env-cmd -e development node dist/main",
     "start:debug": "nest start --debug --watch",
     "start:prod": "env-cmd -e production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
