--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "env-cmd -e $npm_config_env ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
-    "migration:generate": "npm run typeorm -- migration:generate -d dist/database/typeorm-data-source.js  src/database/migrations/$npm_config_name",
-    "migration:run": "npm run build && npm run typeorm migration:run -- -d dist/database/typeorm-data-source.js",
+    "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration:generate": "env-cmd -e $npm_config_env npm run typeorm -- migration:generate -d dist/database/typeorm-data-source.js src/database/migrations/$npm_config_name",
+    "migration:run": "env-cmd -e $npm_config_env npm run typeorm migration:run -- -d dist/database/typeorm-data-source.js",
     "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "env-cmd": "^10.1.0",
     "pg": "^8.13.1",
