--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-	"singleQuote": true,
-	"trailingComma": "all",
-	"printWidth": 140,
-	"tabWidth": 2,
-	"useTabs": true
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 140,
+  "tabWidth": 2,
+  "useTabs": false
 }
