--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie-parser": "^1.4.7",
     "env-cmd": "^10.1.0",
     "passport-custom": "^1.1.1",
+    "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
@@ -61,6 +62,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-kakao": "^1.0.3",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
