--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
-    "chalk": "^5.3.0",
+    "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
