--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "env-cmd": "^10.1.0",
+    "helmet": "^8.0.0",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
