--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.712.0",
     "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
@@ -43,6 +44,7 @@
     "cookie-parser": "^1.4.7",
     "env-cmd": "^10.1.0",
     "helmet": "^8.0.0",
+    "nestjs-typeorm-paginate": "^4.0.4",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
@@ -62,6 +64,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-kakao": "^1.0.3",
