--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "crypto-js": "^4.2.0",
     "env-cmd": "^10.1.0",
     "helmet": "^8.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
@@ -64,6 +67,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
