--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
     "migration:generate": "npm run build && env-cmd -e $npm_config_env npm run typeorm -- migration:generate -d dist/database/data-source.js src/database/migrations/$npm_config_name",
     "migration:run": "env-cmd -e $npm_config_env npm run typeorm migration:run -- -d dist/database/data-source.js",
-    "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts"
+    "migration:revert": "npm run typeorm migration:revert -- -d src/database/typeorm-data-source.ts",
+    "seed:run:all": "env-cmd -e $npm_config_env npx ts-node --require tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d dist/database/data-source.js",
+    "seed:run:file": "env-cmd -e $npm_config_env npx ts-node --require tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d dist/database/data-source.js -- src/database/seeds/$npm_config_name"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.712.0",
@@ -59,6 +61,7 @@
     "standard-version": "^9.5.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.6.3",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
