--- a/package.json
+++ b/package.json
@@ -36,19 +36,23 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^8.0.7",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/ua-parser-js": "^0.7.39",
     "bcrypt": "^5.1.1",
     "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "env-cmd": "^10.1.0",
     "helmet": "^8.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
@@ -56,12 +60,14 @@
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "standard-version": "^9.5.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.6.3",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "ua-parser-js": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -70,6 +76,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/crypto-js": "^4.2.2",
+    "@types/date-fns": "^2.6.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.17.14",
@@ -78,6 +85,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-kakao": "^1.0.3",
     "@types/passport-local": "^1.0.38",
+    "@types/request-ip": "^0.0.41",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
