--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotel-job-api",
-  "version": "0.0.13",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -14,6 +14,7 @@
     "start:prod": "env-cmd -e production node dist/main",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "release": "standard-version",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
