--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "env-cmd": "^10.1.0",
+    "firebase-admin": "^13.1.0",
     "helmet": "^8.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
