--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,14 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v4
 
-      - name: 도커 컨텍스트에 .hbs 포함 여부 확인
-        run: find . -name "*.hbs" || (echo "❌ .hbs 없음! Docker COPY에 포함되지 않을 수 있습니다." && exit 1)
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build dist 확인용
+        run: |
+          pnpm run build
+          echo "📦 dist 구조 확인"
+          find dist -name "*.hbs" || (echo "❌ dist에 .hbs 없음!" && exit 1)
 
       - name: Create ENV JSON File
         id: env-json
